2001-02-15  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessPLUS): Prevent
	core dump when the + operator is
	applied to the null literal.

2001-02-15  Eric Blake  <ebb9@email.byu.edu>

	* src/error.cpp (StaticInitializer,
	PrintINTERFACE_NOT_INNER_CLASS):
	* src/error.h (SemanticError):
	Add INTERFACE_NOT_INNER_CLASS error message.
	* src/expr.cpp (
	ProcessClassInstanceCreationExpression):
	Generate error and return from function
	when a qualified class instance creation
	expression makes use of an interface.
	See JLS 15.9.1 for more information.

2001-02-14  Mo DeJong  <mdejong@redhat.com>

	* acinclude.m4: Add the M4 macro file
	ac_cxx_member_constants.m4.
	* configure.in: Add parens to all
	macro invocations. Add call to
	AC_CXX_MEMBER_CONSTANTS.
	* src/double.cpp:
	* src/double.h: Check for
	HAVE_MEMBER_CONSTANTS, use
	static const members if it
	is defined. Remove uses of
	the explicit keyword.
	* src/long.cpp: Change some
	bit pattern comparisons to
	avoid VC++ warning.
	* src/long.h: Remove uses of
	the explicit keyword.
	* src/m4/ac_cxx_member_constants.m4:
	Add new AC_CXX_MEMBER_CONSTANTS macro.

2001-02-12  Eric Blake  <ebb9@email.byu.edu>

	* configure.in: Add --enable-fp-emulation
	flag to configure.
	* src/double.cpp (IEEEFloat, IEEEDouble):
	* src/double.h (IEEEFloat, IEEEDouble):
	Add emulation code for IEEE 754 compliance.
	Rename FloatValue() and DoubleValue() to
	FloatView(), DoubleView().
	Remove unused FloatRoundedValue() and
	DoubleRoundedValue().
	IEEEDouble now extends BaseLong, for easier
	manipulation of 64 bit data.
	Replace Fmodulus() and Divide() with operator%
	and operator/.
	Add equals(), hashCode(), and compareTo(), which
	follow the semantics of java.lang.Float, Double.
	Add ctor(char *, boolean) to allow detection of
	underflow or overflow.
	* src/expr.cpp (ProcessLEFT_SHIFT, ProcessRIGHT_SHIFT,
	ProcessUNSIGNED_RIGHT_SHIFT, ProcessMOD):
	Simplify calls to shift operations using